kubernetes/apps/medikabalans/medikabalans/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: medikabalans
  namespace: medikabalans
  labels:
    route.scope: external
  annotations:
    external-dns.alpha.kubernetes.io/target: external.vaderrp.com
    gatus.home-operations.com/enabled: "true"
    gatus.home-operations.com/endpoint: |
      group: Default
      url: "https://medikabalans.erinko.fi/healthz"
      conditions:
        - "[STATUS] == 200"
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: gateway-public
      namespace: network
  hostnames:
    - medikabalans.erinko.fi
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: traefik-warp
      backendRefs:
        - group: ""
          kind: Service
          name: medikabalans
          port: 80
          weight: 1
